--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.6.2",
     "cors": "^2.8.5",
     "dompurify": "^3.0.6",
+    "imagesloaded": "^5.0.0",
     "install": "^0.13.0",
     "isomorphic-dompurify": "^1.9.0",
     "js-cookie": "^3.0.5",
@@ -20,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^3.1.0",
     "react-icons": "^4.12.0",
+    "react-masonry-css": "^1.0.16",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
