--- a/client/package.json
+++ b/client/package.json
@@ -20,8 +20,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^3.1.0",
+    "react-grid-gallery": "^1.0.1-alpha.0",
     "react-icons": "^4.12.0",
+    "react-image-gallery": "^1.3.0",
+    "react-image-size": "^2.3.2",
     "react-masonry-css": "^1.0.16",
+    "react-responsive-masonry": "^2.1.7",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
