--- a/client/package.json
+++ b/client/package.json
@@ -17,8 +17,10 @@
     "lucas-silbernagel-smoke-effect-react": "^2.1.0",
     "masonry-layout": "^4.2.2",
     "npm": "^10.2.4",
+    "photoswipe": "^5.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.6",
     "react-google-recaptcha": "^3.1.0",
     "react-grid-gallery": "^1.0.1-alpha.0",
     "react-icons": "^4.12.0",
@@ -29,6 +31,7 @@
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
+    "swiper": "^11.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
