--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
     "@react-hook/window-size": "^3.1.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -32,6 +33,7 @@
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
     "swiper": "^11.0.5",
+    "tailwindcss-textshadow": "^2.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
