--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
+    "react-use-gesture": "^9.1.3",
     "swiper": "^11.0.5",
     "tailwindcss-textshadow": "^2.1.3",
     "web-vitals": "^2.1.4"
