--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,8 @@
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
     "react-use-gesture": "^9.1.3",
+    "react-window": "^1.8.10",
+    "scrollmagic": "^2.0.8",
     "swiper": "^11.0.5",
     "tailwindcss-textshadow": "^2.1.3",
     "web-vitals": "^2.1.4"
