--- a/client/package.json
+++ b/client/package.json
@@ -64,6 +64,7 @@
     ]
   },
   "devDependencies": {
+    "tailwind-scrollbar": "^3.0.5",
     "tailwindcss": "^3.3.5",
     "tailwindcss-animated": "^1.0.1"
   }
