--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,8 @@
     "axios": "^1.6.2",
     "cors": "^2.8.5",
     "dompurify": "^3.0.6",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "imagesloaded": "^5.0.0",
     "install": "^0.13.0",
     "isomorphic-dompurify": "^1.9.0",
@@ -21,6 +23,7 @@
     "photoswipe": "^5.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-draggable": "^4.4.6",
     "react-google-recaptcha": "^3.1.0",
     "react-grid-gallery": "^1.0.1-alpha.0",
