--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "dompurify": "^3.0.6",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
+    "i18next": "^23.8.2",
     "imagesloaded": "^5.0.0",
     "install": "^0.13.0",
     "isomorphic-dompurify": "^1.9.0",
@@ -27,6 +28,7 @@
     "react-draggable": "^4.4.6",
     "react-google-recaptcha": "^3.1.0",
     "react-grid-gallery": "^1.0.1-alpha.0",
+    "react-i18next": "^14.0.5",
     "react-icons": "^4.12.0",
     "react-image-gallery": "^1.3.0",
     "react-image-size": "^2.3.2",
