--- a/api/package.json
+++ b/api/package.json
@@ -26,7 +26,9 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-mysql-session": "^3.0.0",
+    "express-rate-limit": "^7.1.5",
     "express-session": "^1.17.3",
+    "express-validator": "^7.0.1",
     "fs-extra": "^11.1.1",
     "isomorphic-dompurify": "^1.9.0",
     "jsdom": "^22.1.0",
