--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "react-image-gallery": "^1.3.0",
     "react-image-size": "^2.3.2",
     "react-masonry-css": "^1.0.16",
+    "react-responsive": "^9.0.2",
     "react-responsive-masonry": "^2.1.7",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
