--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "react-icons": "^4.12.0",
     "react-image-gallery": "^1.3.0",
     "react-image-size": "^2.3.2",
+    "react-markdown": "^9.0.1",
     "react-masonry-css": "^1.0.16",
     "react-responsive": "^9.0.2",
     "react-responsive-masonry": "^2.1.7",
@@ -39,6 +40,8 @@
     "react-spinners": "^0.13.8",
     "react-use-gesture": "^9.1.3",
     "react-window": "^1.8.10",
+    "remark-breaks": "^4.0.0",
+    "remark-gfm": "^4.0.0",
     "scrollmagic": "^2.0.8",
     "swiper": "^11.0.5",
     "tailwindcss-textshadow": "^2.1.3",
