--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "dompurify": "^3.0.6",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
+    "html-react-parser": "^5.1.8",
     "i18next": "^23.8.2",
     "imagesloaded": "^5.0.0",
     "install": "^0.13.0",
