--- a/client/package.json
+++ b/client/package.json
@@ -44,6 +44,7 @@
     "remark-breaks": "^4.0.0",
     "remark-gfm": "^4.0.0",
     "scrollmagic": "^2.0.8",
+    "sitemap": "^7.1.1",
     "swiper": "^11.0.5",
     "tailwindcss-textshadow": "^2.1.3",
     "web-vitals": "^2.1.4",
